botton css update

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #17885a; }
+  background: #b281cb; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #e843db; }
+  background: #1a9bf8; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #48ab09; }
+  background: #8725b3; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #eeb735; }
+  background: #7e16b1; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #35fbfc; }
+  background: #a7885f; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #6b4437; }
+  background: #e069e3; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #3e7017; }
+  background: #7abe4c; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #bd1747; }
+  background: #d6bac5; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #e01d5c; }
+  background: #6a4e92; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #43efcc; }
+  background: #76453c; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #f14ab3; }
+  background: #60196c; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #ccb937; }
+  background: #e3ed5a; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #72526a; }
+  background: #d9c7e6; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #8f62c9; }
+  background: #4d4b8e; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #19c1d2; }
+  background: #526d52; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #392f40; }
+  background: #ad9e6f; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #f4d20e; }
+  background: #8af9b5; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #7c8ce3; }
+  background: #f33193; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #c99347; }
+  background: #ad2280; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #e11d58; }
+  background: #7f97c0; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #909e94; }
+  background: #45d01e; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #40b4d2; }
+  background: #45f85a; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #e57e8c; }
+  background: #261269; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #591d17; }
+  background: #482688; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #e2f82a; }
+  background: #a33fbc; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #3809f9; }
+  background: #6b8c9b; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #93af54; }
+  background: #a16739; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #a426d7; }
+  background: #0f5d34; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #064229; }
+  background: #ad204e; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #a097aa; }
+  background: #b4e36e; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #fca5f1; }
+  background: #d59160; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #cafea6; }
+  background: #994d11; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #3241d1; }
+  background: #a4676f; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #04eaad; }
+  background: #743447; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #59d5ab; }
+  background: #30c713; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #c98465; }
+  background: #3a7bf0; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #0412c1; }
+  background: #01f5e5; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #627f5e; }
+  background: #3a75c5; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #655882; }
+  background: #b0429e; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #c44346; }
+  background: #35c607; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #0f51e5; }
+  background: #33962d; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #308fb4; }
+  background: #a368f4; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #84d24d; }
+  background: #c34521; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #fac664; }
+  background: #77d85e; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #7c9a98; }
+  background: #150e08; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #cb6058; }
+  background: #8b24e0; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #85e06c; }
+  background: #dbb72a; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #c32edd; }
+  background: #d8a96e; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #56fe0d; }
+  background: #361b4e; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #31d2f1; }
+  background: #bf4e52; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #7f1374; }
+  background: #745eac; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #6ccc09; }
+  background: #09c146; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #67d876; }
+  background: #6b7ab2; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #470e98; }
+  background: #e0e9e6; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #e4c326; }
+  background: #d92183; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #3b9ac5; }
+  background: #6ff549; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #ea0d61; }
+  background: #4f502b; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #999f10; }
+  background: #9c263c; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #c1ef33; }
+  background: #4bb427; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #8422aa; }
+  background: #545f72; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #641757; }
+  background: #adbda4; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #246d39; }
+  background: #04b09c; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #777c4d; }
+  background: #e1dbea; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #e153e8; }
+  background: #5ed121; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #3be0ae; }
+  background: #53bb05; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #edd705; }
+  background: #385a30; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #5edb0f; }
+  background: #7992b5; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #067a56; }
+  background: #adf713; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #088738; }
+  background: #9ca192; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #2c3d2e; }
+  background: #0132b3; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #37d527; }
+  background: #ce8d09; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #8de968; }
+  background: #219dfe; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #92c532; }
+  background: #86158c; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #87113d; }
+  background: #03253b; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #155442; }
+  background: #61070d; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #59c98a; }
+  background: #36e18a; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #7a045d; }
+  background: #8d3302; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #6bfcc9; }
+  background: #d5ed6c; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #53e26b; }
+  background: #b8ba16; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #89f8b6; }
+  background: #628768; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #c5a05c; }
+  background: #ddd34f; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #724914; }
+  background: #9c92ee; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #7f33cb; }
+  background: #be3a28; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #0f9b7f; }
+  background: #548c58; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #092309; }
+  background: #3f4960; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #3b6046; }
+  background: #ce072d; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #0311b8; }
+  background: #5733ba; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #cebdb3; }
+  background: #5b29bb; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #d97013; }
+  background: #42e931; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #95b0ae; }
+  background: #0d42a8; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #abe379; }
+  background: #0c4336; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #c24888; }
+  background: #c4df4d; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #573bb2; }
+  background: #91076f; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #256951; }
+  background: #9c7d9a; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #45d1b8; }
+  background: #48925a; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #f12d2c; }
+  background: #6fdf88; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #25ca13; }
+  background: #d7c007; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #ed1af7; }
+  background: #a59833; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #44f796; }
+  background: #4687bf; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #ccbbbb; }
+  background: #013c4f; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9259,7 +9259,7 @@ th {
     color: #776fff; }
 
 .theme-btn {
-  padding: 14px 21px;
+  padding: 12px 22px;
   font-size: 16px;
   background: #a57dff;
   border: 0px;
