--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #b281cb; }
+  background: #282bc4; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #1a9bf8; }
+  background: #875250; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #8725b3; }
+  background: #54f5de; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #7e16b1; }
+  background: #1c8f4c; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #a7885f; }
+  background: #73ce62; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #e069e3; }
+  background: #f810dc; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #7abe4c; }
+  background: #62b085; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #d6bac5; }
+  background: #f2eda3; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #6a4e92; }
+  background: #321140; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #76453c; }
+  background: #567681; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #60196c; }
+  background: #2cfe79; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #e3ed5a; }
+  background: #24e7c1; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #d9c7e6; }
+  background: #0c9dae; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #4d4b8e; }
+  background: #7a9559; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #526d52; }
+  background: #1d194c; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #ad9e6f; }
+  background: #d01d4f; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #8af9b5; }
+  background: #40c24e; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #f33193; }
+  background: #92b3fb; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #ad2280; }
+  background: #2cc795; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #7f97c0; }
+  background: #d721ae; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #45d01e; }
+  background: #2fe84d; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #45f85a; }
+  background: #c4fdc3; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #261269; }
+  background: #8e4908; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #482688; }
+  background: #139202; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #a33fbc; }
+  background: #1d792c; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #6b8c9b; }
+  background: #0fe55d; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #a16739; }
+  background: #860178; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #0f5d34; }
+  background: #285a71; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #ad204e; }
+  background: #eed45d; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #b4e36e; }
+  background: #027f47; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #d59160; }
+  background: #e99ace; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #994d11; }
+  background: #6cd066; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #a4676f; }
+  background: #fe671b; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #743447; }
+  background: #ced05b; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #30c713; }
+  background: #ec23a9; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #3a7bf0; }
+  background: #56823f; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #01f5e5; }
+  background: #ac0968; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #3a75c5; }
+  background: #aaaed3; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #b0429e; }
+  background: #2eee49; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #35c607; }
+  background: #8a1f9c; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #33962d; }
+  background: #211d59; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #a368f4; }
+  background: #5d2326; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #c34521; }
+  background: #0a5b5e; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #77d85e; }
+  background: #c5a72e; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #150e08; }
+  background: #ea5a40; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #8b24e0; }
+  background: #5c43ad; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #dbb72a; }
+  background: #440142; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #d8a96e; }
+  background: #8e1d5c; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #361b4e; }
+  background: #8f2f55; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #bf4e52; }
+  background: #bdd367; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #745eac; }
+  background: #33ae2b; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #09c146; }
+  background: #d3ac82; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #6b7ab2; }
+  background: #a9dfe4; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #e0e9e6; }
+  background: #281ccd; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #d92183; }
+  background: #9d3bdc; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #6ff549; }
+  background: #26745f; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #4f502b; }
+  background: #01011d; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #9c263c; }
+  background: #1e55cf; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #4bb427; }
+  background: #d4088a; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #545f72; }
+  background: #e876ca; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #adbda4; }
+  background: #80b44b; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #04b09c; }
+  background: #bd0386; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #e1dbea; }
+  background: #e3c46e; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #5ed121; }
+  background: #59cf50; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #53bb05; }
+  background: #cedaea; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #385a30; }
+  background: #831d0f; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #7992b5; }
+  background: #0eeed9; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #adf713; }
+  background: #1c741d; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #9ca192; }
+  background: #6092bd; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #0132b3; }
+  background: #f473ce; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #ce8d09; }
+  background: #9e4337; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #219dfe; }
+  background: #7f2841; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #86158c; }
+  background: #8bc92e; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #03253b; }
+  background: #6f959b; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #61070d; }
+  background: #233833; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #36e18a; }
+  background: #460b0d; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #8d3302; }
+  background: #31a150; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #d5ed6c; }
+  background: #23cfa8; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #b8ba16; }
+  background: #f69b21; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #628768; }
+  background: #ec29f8; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #ddd34f; }
+  background: #425e59; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #9c92ee; }
+  background: #9760e8; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #be3a28; }
+  background: #eb31e6; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #548c58; }
+  background: #5f5197; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #3f4960; }
+  background: #fb52de; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #ce072d; }
+  background: #aa79a8; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #5733ba; }
+  background: #19d46b; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #5b29bb; }
+  background: #9f9ac3; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #42e931; }
+  background: #65ca56; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #0d42a8; }
+  background: #7d79e1; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #0c4336; }
+  background: #0efe44; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #c4df4d; }
+  background: #bc90a7; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #91076f; }
+  background: #95721d; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #9c7d9a; }
+  background: #a75853; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #48925a; }
+  background: #d097a0; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #6fdf88; }
+  background: #3d439d; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #d7c007; }
+  background: #9d2478; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #a59833; }
+  background: #bd4070; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #4687bf; }
+  background: #ed933b; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #013c4f; }
+  background: #37adc5; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
