checkbox css update

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #282bc4; }
+  background: #e9ebfa; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #875250; }
+  background: #ce09c8; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #54f5de; }
+  background: #9e2e16; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #1c8f4c; }
+  background: #e348c2; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #73ce62; }
+  background: #ddc4e2; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #f810dc; }
+  background: #82b105; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #62b085; }
+  background: #a6a965; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #f2eda3; }
+  background: #ee2cbf; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #321140; }
+  background: #faf15c; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #567681; }
+  background: #8ff076; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #2cfe79; }
+  background: #db8b19; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #24e7c1; }
+  background: #027047; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #0c9dae; }
+  background: #100d44; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #7a9559; }
+  background: #455f0c; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #1d194c; }
+  background: #a18143; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #d01d4f; }
+  background: #da0856; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #40c24e; }
+  background: #cdbb0f; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #92b3fb; }
+  background: #0568fe; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #2cc795; }
+  background: #1cab81; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #d721ae; }
+  background: #b594c5; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #2fe84d; }
+  background: #6994ad; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #c4fdc3; }
+  background: #cf3408; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #8e4908; }
+  background: #1ade95; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #139202; }
+  background: #0c9bdc; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #1d792c; }
+  background: #a1b86b; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #0fe55d; }
+  background: #1fc002; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #860178; }
+  background: #8ea908; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #285a71; }
+  background: #5c5554; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #eed45d; }
+  background: #6683ef; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #027f47; }
+  background: #6e8d96; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #e99ace; }
+  background: #d2c4dc; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #6cd066; }
+  background: #074d8e; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #fe671b; }
+  background: #751a03; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #ced05b; }
+  background: #89c8cb; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #ec23a9; }
+  background: #dadcd2; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #56823f; }
+  background: #49e408; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #ac0968; }
+  background: #a087c0; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #aaaed3; }
+  background: #745ade; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #2eee49; }
+  background: #84f996; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #8a1f9c; }
+  background: #2f86f6; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #211d59; }
+  background: #2b28e8; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #5d2326; }
+  background: #607c2e; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #0a5b5e; }
+  background: #c1f338; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #c5a72e; }
+  background: #8ec371; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #ea5a40; }
+  background: #c616db; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #5c43ad; }
+  background: #837615; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #440142; }
+  background: #3d78bc; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #8e1d5c; }
+  background: #081f33; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #8f2f55; }
+  background: #0a3dca; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #bdd367; }
+  background: #cc4b35; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #33ae2b; }
+  background: #5a72f8; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #d3ac82; }
+  background: #8e51e9; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #a9dfe4; }
+  background: #cae772; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #281ccd; }
+  background: #e65b81; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #9d3bdc; }
+  background: #b1a938; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #26745f; }
+  background: #ccdf6c; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #01011d; }
+  background: #099ff8; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #1e55cf; }
+  background: #ead5f8; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #d4088a; }
+  background: #89e8dd; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #e876ca; }
+  background: #07aeff; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #80b44b; }
+  background: #ba2c96; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #bd0386; }
+  background: #634631; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #e3c46e; }
+  background: #b8b830; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #59cf50; }
+  background: #617f7b; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #cedaea; }
+  background: #d7f640; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #831d0f; }
+  background: #611996; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #0eeed9; }
+  background: #48c381; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #1c741d; }
+  background: #0e04a4; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #6092bd; }
+  background: #7aff0e; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #f473ce; }
+  background: #892ea8; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #9e4337; }
+  background: #856abd; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #7f2841; }
+  background: #afda29; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #8bc92e; }
+  background: #38b362; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #6f959b; }
+  background: #6caf24; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #233833; }
+  background: #a79c4b; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #460b0d; }
+  background: #d70abd; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #31a150; }
+  background: #951783; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #23cfa8; }
+  background: #22a316; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #f69b21; }
+  background: #fb458e; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #ec29f8; }
+  background: #8d014e; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #425e59; }
+  background: #4a776d; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #9760e8; }
+  background: #29ce0e; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #eb31e6; }
+  background: #dfd329; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #5f5197; }
+  background: #d53551; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #fb52de; }
+  background: #bb66ad; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #aa79a8; }
+  background: #5e8c67; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #19d46b; }
+  background: #abec13; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #9f9ac3; }
+  background: #959e30; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #65ca56; }
+  background: #d2f062; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #7d79e1; }
+  background: #776421; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #0efe44; }
+  background: #41917c; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #bc90a7; }
+  background: #6a262c; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #95721d; }
+  background: #5092d3; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #a75853; }
+  background: #7c41fb; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #d097a0; }
+  background: #3f8ad5; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #3d439d; }
+  background: #346477; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #9d2478; }
+  background: #ab1b25; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #bd4070; }
+  background: #8f4d11; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #ed933b; }
+  background: #aba788; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #37adc5; }
+  background: #1de77a; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11517,6 +11517,10 @@ input:checked + .sliders:before {
     top: 3px;
     position: absolute;
     left: 12px; }
+  .head-input .check-container {
+    position: absolute;
+    top: 4px;
+    left: 10px; }
 
 .connector-config-row {
   border-radius: 15px; }
@@ -12170,19 +12174,19 @@ input:checked + .sliders-Not .not-blue-bg {
   height: 18px;
   width: 18px;
   background-color: #fff;
-  border: 2px solid #f4f4f4;
+  border: 1px solid #717171;
   border-radius: 6px; }
 
 /* On mouse-over, add a grey background color */
 .check-container:hover input ~ .checkmark {
   background-color: #fff;
-  border: 2px solid #f4f4f4;
+  border: 1px solid #717171;
   border-radius: 6px; }
 
 /* When the checkbox is checked, add a blue background */
 .check-container input:checked ~ .checkmark {
-  background-color: #000;
-  border: 2px solid #000;
+  background-color: #717171;
+  border: 1px solid #717171;
   border-radius: 6px; }
 
 /* Create the checkmark/indicator (hidden when not checked) */
@@ -12197,8 +12201,8 @@ input:checked + .sliders-Not .not-blue-bg {
 
 /* Style the checkmark/indicator */
 .check-container .checkmark:after {
-  left: 4px;
-  top: 0px;
+  left: 5px;
+  top: 1px;
   width: 6px;
   height: 12px;
   border: solid white;
@@ -12206,6 +12210,10 @@ input:checked + .sliders-Not .not-blue-bg {
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg); }
+
+td .check-container {
+  margin: 3px 0px 0px 0px;
+  padding: 0px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
